# Relaxation

docs/: documentSMD.tex  protocolADC.tex  protocolSMD.tex
mcu/: BUFFER.c  BUFFER.h  COMMANDS.c  COMMANDS.h  Makefile  main.c  mcu_console.py  readme.txt
mcu_adc/: BUFFER.c  COMMANDS.c  COMMANDS.h  COMMANDS_AD7730.c  COMMANDS_AD7730.h  Makefile  USART.c  USART.h  main.c  mcu_console.py
mcu_adc_arduino_ad7730/: .directory
mcu_adc_arduino_ad7730/arduino_ad7730mod/: arduino_ad7730mod.ino
mcu_smd_arduino/: SMD_mcu.ino
programs/: .directory
programs/QRlxLib/: CMakeLists.txt  lfQT4Utils.cmake
programs/QRlxLib/include/: QRlxData
programs/QRlxLib/src/: QRlxData.cpp  QRlxData.h
programs/RxStep/: CMakeLists.txt  CPackSourceConfig.cmake  build.sh  readme.txt  rxstep.conf  upload.sh
programs/RxStep/CMakeModules/: CreateUploadScripts.cmake  FindQRlxLib.cmake  FindQextSerialPort.cmake  RxConfig.h.cmake  lfQT4Utils.cmake  upload.sh.cmake
programs/RxStep/include/: ExperimentWizard.h  RxBlock.h  RxCalculator.h  RxCreateReport.h  RxDataSaver.h  RxDataStorage.h  RxExperiment.h  RxForceSensor.h  RxForceStep.h  RxIfBlock.h  RxLoading.h  RxMainWindow.h  RxSMD.h  RxSampling.h  RxStepCounterBlock.h  RxStepMotor.hh  RxStrainStep.h  RxUnloading.h  RxXmlSettings.h  SearchDevices.h  StepViewForm.h  debugSViewerDlg.h  ssGlobal.h
programs/RxStep/rc/: resources.qrc
programs/RxStep/src/: ExperimentWizard.cpp  RxCalculator.cpp  RxCreateReport.cpp  RxDataSaver.cpp  RxExperiment.cpp  RxForceSensor.cpp  RxForceStep.cpp  RxIfBlock.cpp  RxLoading.cpp  RxMainWindow.cpp  RxSMD.cpp  RxSampling.cpp  RxSelectReportFile.cpp  RxStepCounterBlock.cpp  RxStrainStep.cpp  RxUnloading.cpp  RxXmlSettings.cpp  SearchDevices.cpp  StepViewForm.cpp  debugSViewerDlg.cpp  main.cpp  ssGlobal.cpp
programs/RxStep/ui/: ExpSettingsWizardPage.ui  PatternWizardPage.ui  SMDCfg.ui  SetPatternWizardPage.ui  StepView.ui  TMBCfg.ui  debugStepViewer.ui  mainWindow.ui  startDialog.ui
programs/SMDTest/: CMakeCache.txt  CMakeLists.txt  Makefile  SMDTest  build.sh  cmake_install.cmake  readme.txt  ui_mainDlg.h
programs/SMDTest/CMakeModules/: FindQextSerialPort.cmake
programs/SMDTest/src/: MainDlg.cpp  MainDlg.h  main.cpp  moc_MainDlg.cxx  moc_MainDlg.cxx_parameters
programs/SMDTest/ui/: mainDlg.ui
programs/qextserialport/src/: Makefile
programs/qlfdevices/: CMakeCache.txt  Makefile  cmake_install.cmake
programs/qlfdevices/src/: moc_PIDController.cxx_parameters  moc_QlfDevices.cxx_parameters  moc_QlfIOBlender.cxx  moc_QlfIOBlender.cxx_parameters  moc_QlfIOPipe.cxx  moc_QlfIOPipe.cxx_parameters  moc_QlfModbus.cxx  moc_QlfModbus.cxx_parameters  moc_QlfOven.cxx  moc_QlfOven.cxx_parameters  moc_QlfPIDControllers.cxx_parameters  moc_QlfRNet.cxx  moc_QlfRNet.cxx_parameters  moc_QlfSMD.cxx  moc_QlfSMD.cxx_parameters  moc_QlfSPDevice.cxx  moc_QlfSPDevice.cxx_parameters  moc_QlfSensors.cxx_parameters  moc_QlfTMB.cxx  moc_QlfTMB.cxx_parameters  moc_QlfTOTestMachine.cxx  moc_QlfTOTestMachine.cxx_parameters  moc_QlfTUB.cxx  moc_QlfTUB.cxx_parameters  moc_QlfThread.cxx_parameters  moc_QlfTornPend.cxx  moc_QlfTornPend.cxx_parameters  moc_TemperatureSensor.cxx_parameters
smcd/kicad/library_kicad/: .directory  CY7C68320.lib  LFbutton.lib  LFcomponents.dcm  LFcomponents.lib  LFconnectors.dcm  LFconnectors.lib  LFresistor.dcm  LFresistor.lib  power.dcm  power.lib
smcd/kicad/library_kicad/AnalogDevices/: LFcomponent.dcm  LFcomponent.lib  component.dcm  component.lib  component.sym
smcd/kicad/library_kicad/Atmel/: Atmega16.dcm  Atmega16.lib  Atmega32.dcm  Atmega32.lib  Atmega64.dcm  Atmega64.lib  Atmega8-16PI.dcm  Atmega8-16PI.lib  at32uca0512.dcm  at32uca0512.lib
smcd/kicad/library_kicad/Connectors/: CONN_USB-B.mdc  cir_diag.bck  cir_diag.dcm  cir_diag.lib
smcd/kicad/library_kicad/Maxim/: max.dcm  max.lib
smcd/kicad/mod_kicad/: LFcomponents.mod  LFconnectors.mdc  LFconnectors.mod  LFsmd_case.mdc  LFsmd_case.mod
smcd/kicad/safeduino_smd_modul/: ovtSwitches.sch  smd_mod.pro  smd_mod.sch
smcd/kicad/smcd/: smcd-cache.lib  smcd.brd  smcd.cmp  smcd.net  smcd.pro  smcd.sch
strain gauge shema/: shema_3-cache.lib  shema_3.pro  shema_3.sch
